# denosing_nafnet_mlops

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  dvc.yaml  pyproject.toml
configs/: config.yaml
configs/data/: sidd.yaml
configs/logger/: default.yaml  mlflow.yaml
configs/model/: base.yaml  dncnn.yaml  nafnet.yaml
configs/train/: dncnn.yaml  nafnet.yaml
models/dncnn/: config.pbtxt
models/nafnet/: config.pbtxt
plots/baseline(dncnn)/e6201b6950e940dd93725c4fcece02a9/: params.txt
plots/nafnet/aeaba6ae8b974ab499acaff1487df563/: params.txt
scripts/: download_data.py  export_trt.sh  infer_triton.py  plots.py  start_triton.sh
src/denoising/: __init__.py  data.py  export.py  training.py
src/denoising/models/: __init__.py  base_module.py  dncnn.py  loss.py  nafnet.py
