[tool.poetry]
name = "denoising"
version = "0.1.0"
description = "MLOps pipeline for image denoising with NAFNet and DnCNN"
authors = ["Dorogova Sofia <dorogova.siu@phystech.edu>"]
license = "MIPT"

[tool.poetry.dependencies]
python = "3.12.10"
torch = "^2.3"
torchvision = "^0.18"
pytorch-lightning = "^2.2"
hydra-core = "^1.3"
omegaconf = "^2.3"
torchmetrics = { version = "^1.3", extras = ["image"] }
dvc = "^3.50"
dvc-gdrive = "^3.0"
mlflow = "^2.13"
onnx = "^1.16"
onnxruntime = "^1.18"
pre-commit = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
isort = "^5.13"
flake8 = "^7.0"
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
