[tool.poetry]
name = "denoising"
version = "0.1.0"
description = "MLOps pipeline for image denoising with NAFNet and DnCNN"
authors = ["Dorogova Sofia <dorogova.siu@phystech.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3"
torchvision = "^0.18"
pytorch-lightning = "^2.2"
hydra-core = "^1.3"
omegaconf = "^2.3"
torchmetrics = { version = "^1.3", extras = ["image"] }
dvc = "^3.50"
dvc-gdrive = "^3.0"
mlflow = "^2.13"
onnx = "^1.16"
onnxruntime = "^1.18"
rich = "^13.7.1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
tritonclient = { version = "^2.45.0", extras = ["all"] }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7"
fire = "^0.6.0"

[tool.ruff]
line-length = 100

exclude = [
    ".git",
    "__pycache__",
    "venv",
    "artifacts", "logs", "outputs", "checkpoints",
]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "ANN",      # flake8-annotations
    "B",        # bugbear
    "A",        # builtins
    "C4",       # comprehensions
    "TID",      # tidy-imports
    "TCH",      # type-checking
    "S",        # bandit (security)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["src.denoising"]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["torch", "pytorch_lightning", "hydra"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
